static/css/style.css
/* ... */
.form input[type="submit"]:hover{ background: #23c56f;}
.form input[type="submit"]:focus{
	background: #04a650;
    -webkit-box-shadow: inset 0 20px 0px -17px #03773a;
    -moz-box-shadow: inset 0 20px 0px -17px #03773a;
    box-shadow: inset 0 20px 0px -17px #03773a;
    color: #fff;
}

input[type="submit"]:disabled, input[type="submit"]:disabled:hover {
	background:#eee; border:1px solid #0083d6; color:#0083d6;
}

.form .align-right{text-align:right;}

.form .top a.signin{
	text-transform: uppercase;
    display: inline-block;
    margin-top: 8px;
}
.form .field-item{position:relative;}
.form .field-item:after{
    background-repeat: no-repeat;
    text-indent: -9999px;
    content: " ";
    display: block;
    height: 25px;
    width: 25px;
    position: absolute;
	background: transparent url(../img/icons-sprite.png) no-repeat 0 0;
	top:12px;left:15px;
	background-size:805px auto;
}
.form .checkbox{margin-top:20px;}

.form .company-name input,
.form .email input,
.form .password input{    padding-left: 50px;}
/*.form .company-name:after{

}*/
.form .company-name:after{background-position: 0px -175px;}
.form .email:after{background-position: -261px 0px;}
.form .password:after{background-position: -524px -86px;}

.form .actions{margin-top:25px;}

#signup{
	background: transparent url(../img/signup-side-bg.png) no-repeat 0 0;background-size:auto 100%;
	max-width:765px;
	width:100%;
	margin:40px auto;
	overflow:hidden;border-radius:6px 6px;
}
#signup .form{
	float:right;margin:0px 0px;border-radius:0px 0px;
}

#login{
	max-width:370px;
	margin:40px auto;
	padding: 30px 31px 30px;
	overflow: hidden;
}

#login a{color:#fff;}

#login .top{
	padding: 25px 30px 60px;
	margin: -30px -31px 30px;
	background: transparent url(../img/hdr-sign-bg.png) no-repeat 0 0;background-size:cover;
}
#login .top a.cr8-account{background: transparent url(../img/sign-cr8.png) no-repeat 0 0;    padding-left: 25px;}
#login .top h2{
	margin: 40px 0px 8px;
    line-height: 100%;
    text-align: center;
    color: #fff;
	font-size:35px;
	font-family:"Roboto Condensed";
}
#login .top h4{
	text-align: center;
    color: #fff;
	font-size:20px;
	font-family:"Roboto Condensed";
	font-weight: 400;
        text-transform: uppercase;
    margin: 0px;
}





@media (max-width: 767px){
	.user-logged-in .grid-62,
	.user-logged-in .grid-23{width:100%;}
	.top-search{margin:15px 0px;}
	.user-logged-in #hdr-top input[type="text"]{max-width:100%;}
	#hdr-top .hdr-opts{    text-align: right;    white-space: nowrap;}
	#hdr-top .hdr-opts li:last-child{    margin-right:0px;}
	.user-logged-in #page-content .center-widget{margin:25px 0px;}
	.user-account-options{padding-bottom:10px;}

	.user-logged-in .grid-72,
	.user-logged-in .grid-28{width:100%;}

	.user-logged-in.layout-1-column #page-content .center-widget{margin:20px 0px;}
	#page-content .center-widget a.btn.action{
		margin-bottom: 10px;
		width: 100%;
		text-align: center;
	}

}

@media (max-width: 520px){
	.nav .previous, .nav .pages, .nav .next {    float: none;    text-align: center; width:100%;}
	.tbl{    display: inherit;}
}

/* Content feed */
.auditRow {
    background: rgb(0, 0, 0); /* Fall-back for browsers that don't support rgba */
    background: rgba(0, 0, 0, .05);
    min-height: 195px;
    border-radius: 10px;
}
.auditRowHeader {
    font-weight: 400;
    text-transform: uppercase;
    font-size: 21px;
}
.auditPic {
    border-bottom-left-radius: 10px;
    border-top-left-radius: 10px;
    min-height: 195px;
    opacity: 0.6;
    clear: both;
    overflow: hidden;
    padding: 35px 0px 35px 0px;
    box-sizing: border-box;
    vertical-align: middle;
}
.auditPic:hover {
    opacity: 1;
}
.auditDesc {
    padding:20px;
}
.auditDesc #counts {
    color: #04B35B;
    font-weight: 300;
}
.auditLast {
    margin-top: 60px;
}


/*LOGIN SIGNUP FORGOT PASS SHIT input field styling */
.formLoggedOut {
    max-height:25px;
    width:80%;
}

.hidden {
	display: none;
}

.clearfix.br:after {
	height: 19px;
}

.dialog {
	margin: auto auto;
	padding: 0;
	border: 0;
	display: none;
	position: fixed;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	background-color: rgba(0, 0, 0, 0.2);
	width: 100%;
	height: 100%;
	z-index: 1000;
	overflow: auto;
}

.dialog.visible {
	display: block;
}

.dialog > div {
	margin: 10px auto;
	background: white;
	padding: 10px 20px;
	width: 600px;
	border-radius: 10px;
}

.dialog > div > h2 {
	padding-top: 10px !important;
}

.select2-container--default .select2-selection--multiple {
    background-color: #eceff4;
    border: 1px solid #cad3df;
}

.select2-container--default.select2-container--focus .select2-selection--multiple{
    border: 1px solid #0083d6;
}
.select2-container--default .select2-selection--multiple .select2-selection__choice{
    color:#fff;
    background-color: #0083d6;
    border:1px solid #0083d6;
}
.select2-container--default .select2-selection--multiple .select2-selection__choice__remove{
    color:#fff;
}
.select2-container--default .select2-results__option--highlighted[aria-selected]{
    background-color: #0083d6;
}

